[package]
name = "planetgen"
version = "0.1.0"
authors = ["Matthew Nicholls <matthew.nicholls95@hotmail.co.uk>"]
build = "build.rs"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "0.7"
cgmath = "0.11"
sdl2 = "0.29.0"
num = "0.1"
png = "0.6.2"

[dependencies.planetgen_engine]
path = "planetgen_engine"

[dependencies.rust-libnoise]
git = "https://github.com/mjn33/rust-libnoise"
